# gst_take_home

./: Cargo.toml  README.md
src/: encoder.rs  input.rs  lib.rs  output.rs  recorder.rs  server.rs  traits.rs  util.rs
src/encoder/: av1enc.rs  nvh264enc.rs  nvh265enc.rs  x264enc.rs  x265enc.rs
src/input/: test.rs  v4l2.rs
src/output/: fakesink.rs  filesink.rs  muxer.rs
src/recorder/: errors.rs  gst_pipeline.rs
