[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]


[lib]
crate-type = ["cdylib", "rlib"]
name = "recorder"
path = "src/lib.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[dependencies]
once_cell = "1"
anyhow = "1.0.68"
async-std = { version = "1.7" }
async-trait = "0.1.57"
axum = "0.6.2"
clap = "2.33"
crossbeam-channel = "0.5.6"
eyre = "0.6.5"
futures-util = "0.3.17"
gstreamer = "0.19.5"
gstreamer-video = "0.16"
reqwest = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.38"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = "0.1"
tokio-test = "0.4.2"
toml = "0.7.3"
tracing = "0.1.37"
tracing-futures = "0.2"
tracing-gstreamer = "0.5.0"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
# tracing-tracy = "0.10.2"
